--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FoorballApp</string>
+    <string-array name="default_group_option">
+        <item>General Table</item>
+    </string-array>
 </resources>
